@@ -4,8 +4,9 @@
   "timesup": "Timeout",
   "cancel": "Cancel",
   "accept": "Accept",
+  "negate": "Negate",
   "confirm": "Confirm",
-  "Portuguese": "Portuguese",
+  "portuguese": "Portuguese",
   "english": "English",
   "deny": "Deny",
   "name": "Name",
