@@ -19,7 +19,6 @@ const guildSchema = new Schema({
   blockedChannels: { type: Array, default: [] },
   disabledCommands: { type: Array, default: [] },
   lang: { type: String, default: 'pt-BR' },
-  censored: { type: Boolean, default: false },
 });
 
 const userThemes = new Schema({
