@@ -67,7 +67,6 @@ export interface IGuildSchema {
   blockedChannels: Array<string>;
   disabledCommands: Array<string>;
   lang: string;
-  censored: boolean;
 }
 
 export interface IMagicItem {
